--- a/css/index.css
+++ b/css/index.css
@@ -487,11 +487,6 @@ a {
   font-size: 0.8rem;
   line-height: 0.35rem;
 }
-.navbar-middle__client-data {
-  display: flex;
-  justify-content: end;
-  align-items: center;
-}
 .navbar-middle__client-data-nav {
   display: flex;
   justify-content: end;
@@ -572,10 +567,15 @@ a {
   .offcanvas {
     transition: 0s;
   }
-  .offcanvas.hiding, .offcanvas.showing, .offcanvas.show, .offcanvas-backdrop {
+  .offcanvas.hiding, .offcanvas.showing, .offcanvas.show {
     position: absolute;
     top: 210px;
     height: 300px;
+  }
+  .offcanvas-backdrop {
+    position: absolute;
+    top: 210px;
+    height: 100vh;
   }
   .offcanvas.show {
     transform: translateY(0);
@@ -596,9 +596,13 @@ a {
   .navbar-middle__client-data-link {
     padding-top: 4%;
   }
-  .offcanvas.hiding, .offcanvas.showing, .offcanvas.show, .offcanvas-backdrop {
+  .offcanvas.hiding, .offcanvas.showing, .offcanvas.show {
     top: 180px;
     max-height: 250px;
+  }
+  .offcanvas-backdrop {
+    top: 180px;
+    height: 100vh;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -623,12 +627,6 @@ a {
   .navbar-middle {
     background-color: #4d2952;
     padding: 16px;
-    display: flex;
-    align-items: center;
-  }
-  .navbar-middle__search {
-    display: flex;
-    align-items: center;
   }
   .navbar-middle__search-input {
     display: none;
@@ -711,7 +709,7 @@ a {
   }
   .navbar-middle__client-data-nav {
     padding: 1.5% 0 0 0;
-    gap: 20%;
+    gap: 6%;
   }
   .navbar-middle__client-data-icon {
     width: auto;
@@ -731,6 +729,22 @@ a {
   }
   .navbar-middle__client-data-link {
     display: none;
+  }
+  .offcanvas {
+    transition: 0.5s;
+  }
+  .offcanvas.hiding, .offcanvas.showing, .offcanvas.show {
+    top: 0px;
+    height: 100vh;
+    max-height: 100vh;
+  }
+  .offcanvas-backdrop {
+    top: 0px;
+    height: 100vh;
+    max-height: 100vh;
+  }
+  .offcanvas.show {
+    transform: translateY(100);
   }
   .navbar-bottom__offcanvas {
     display: flex;
@@ -799,7 +813,7 @@ a {
     padding: 1.3% 5%;
   }
   .navbar-middle__client-data-nav {
-    gap: 15%;
+    gap: 8%;
   }
   .navbar-middle__client-data-icon {
     max-height: 20px;
